force-app/main/default/objects/Branch__c/Branch__c.object-meta.xml
<CustomObject>
    <label>Branch</label>
    <pluralLabel>Branches</pluralLabel>
    <nameField>
        <label>Branch Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Represents a physical or virtual branch. Used for Trainer visibility mapping.</description>
</CustomObject>