force-app/main/default/objects/Branch__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Agency</fullName><default>false</default><label>Agency</label></value>
            <value><fullName>BANCA</fullName><default>false</default><label>BANCA</label></value>
            <value><fullName>Direct</fullName><default>false</default><label>Direct</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>