force-app/main/default/objects/Branch__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Text</type>
    <length>100</length>
    <required>true</required>
</CustomField>