force-app/main/default/objects/Branch__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Text</type>
    <length>100</length>
</CustomField>